Fixed refreshing on forecast/radar screen + added extra logging to try and fix other errors + hopefully disabled obfuscation